# colab-enterprise-experiments

./: .gitignore  README.md  debug_chunks.jsonl  debug_notebook.py  scratch_docai.py  test_documentai_schema.py  test_gemini.py  test_mu_bug.py  update_notebook.py  update_param.py
.agent/: CONTEXT.md
.agent/skills/delete-notebook-resources/: SKILL.md
architecture/: miro_blueprint.json  system_architecture.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/image/: route.ts
frontend/src/app/api/search/: route.ts
frontend/src/components/: FilterSidebar.tsx  GroupedCitation.tsx  MessageBubble.tsx
notebooks/: byoc-guide.ipynb  byoc_guide.ipynb  byoc_image_filter_guide.ipynb  pdf_processing_pipeline.ipynb
scripts/: .env.example  miro_import.py  pyproject.toml
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
